[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/combat/health_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/combat/hitbox_area.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/enemies/enemy_hitbox_area.gd" type="Script" id=4]

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 1 )]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[node name="MonitoringTimer" type="Timer" parent="."]
one_shot = true

[node name="HitboxArea" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )
texture = NodePath("../Texture")
health_bar = NodePath("../HealthBar")

[connection signal="screen_entered" from="Notifier" to="." method="on_screen_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
[connection signal="timeout" from="MonitoringTimer" to="." method="on_monitoring_timeout"]
